--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -16,7 +16,9 @@ body {
   color: var(--el-text-color-primary);
   background: var(--el-bg-color);
   line-height: 1.6;
-  font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
+  font-family:
+    'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑',
+    Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
